Fixing issue where filter UI looks off on mobile

--- a/demo3/static/common.css
+++ b/demo3/static/common.css
@@ -224,6 +224,8 @@ button, input {
   font-size: var(--body);
   font-weight: 300;
   height: 40px;
+  border-radius: 0px;
+  -webkit-appearance: none;
   background-color: var(--forground);
   padding-left: 20px;
   padding-right: 20px;
